preload done & fix realise

--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -53,24 +53,23 @@
             <i class="fa-solid fa-champagne-glasses"></i>       
             Банкеты</a>
           </li>
-          <!-- <li class="list__link"><a href="./pages/delivery.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
+          <li class="list__link"><a href="./delivery.html"> 
+            <i class="fa-solid fa-map-location-dot"></i>       
             Доставка</a>
-          </li> -->
+          </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
             <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
           </a>
-          <a class="header__icon--map" href="./delivery.html"><i class="fa-solid fa-map-location-dot"></i></a> 
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt=""></a>
+          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
         </div>
       </div>
     </section>
     <!-- ! ................ MAP .................. -->
     <section class="delivery">
       <div class="container">
-        <div class="delivery__description">
+        <div class="description">
           <div class="category">
             <hr class="category__line" />
             <h1 class="category__title">
@@ -78,16 +77,37 @@
               Доставка</h1>
             <hr class="category__line" />
           </div>
-          <ul>
+          <ul class="description__list">
             <li>Доставка при заказе от 30 руб. <span>БЕСПЛАТНА</span>!</li>
             <li>При заказе до 30 руб. &ndash; <span>5 руб</span>.</li>
-            <li>Время доставки: <span>30-35 мин</span></li>
+            <li>Оформить доставку: <a  href="tel:+375291371010">+375 (29) 137 10 10</a></li>
+          </ul>                    
+          <ul class="description__timetable">
+            <li>Время доставки:</li>
+            <li>ПН - ЧТ: <span>12.00-21.00</span></li>
+            <li>ПТ - СБ: <span>12.00-22.00</span></li>
+            <li>ВС:      <span>12.00-19.00</span></li>
           </ul>
-          <a class="delivery__description--btn" href="tel:+375291371010">
+          <a class="description--btn" href="tel:+375291371010">
             Заказать доставку
           </a>
         </div>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Adecad88acad158235a585c8b4e43860f90a153028068cb0f167bfec5520f26d6&amp;source=constructor" frameborder="0"></iframe>
+        <div class="delivery__terms">
+          <div class="container">
+          <ul>            
+            <h3>Условия доставки</h3>
+            <li>Расчет производится согласно актуальным ценам.</li>
+            <li>Оплата осуществляется наличными курьеру при получении заказа, также возможна оплата банковской картой, для этого необходимо <span>предупредить оператора при формировании заказа</span>.</li>
+            <li>К оплате принимаются только белорусские рубли.</li>
+          </ul>          
+          <ul>
+            <h3>Отмена и возврат</h3>
+            <li>Принятые заказы <span>не подлежат отмене</span> и редактированию.</li>
+            <li>Готовая продукция возврату не подлежит.</li>
+            <li>Некачественная продукция может быть заменена по согласованию, по номеру <span>+375 (29) 137 10 10</span> при наличии фото и документа подтверждающего оплату.</li>
+          </ul></div>
+        </div>
       </div>
     </section>
     <!-- ! ................. FOOTER ..................... -->
@@ -98,7 +118,7 @@
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
             <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
