--- a/pages/kitchen.html
+++ b/pages/kitchen.html
@@ -26,7 +26,7 @@
       property="og:description"
       content="Меню кухни кафе Caprese"
     />
-    <title>Обеденное меню</title>
+    <title>Кухня</title>
   </head>
   <body>
     <!-- ! ............... NAVIGATION ................ -->
@@ -53,20 +53,19 @@
             <i class="fa-solid fa-champagne-glasses"></i>       
             Банкеты</a>
           </li>
-          <!-- <li class="list__link"><a href="./pages/delivery.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
+          <li class="list__link"><a href="./delivery.html"> 
+            <i class="fa-solid fa-map-location-dot"></i>       
             Доставка</a>
-          </li> -->
+          </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
             <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
           </a>
-          <a class="header__icon--map" href="./delivery.html"><i class="fa-solid fa-map-location-dot"></i></a> 
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="inst"></a>
+          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
         </div>
       </div>
-    </section>    
+    </section>   
     <!-- ! ................ KITCHEN .................... -->
     <section class="kitchen" id="kitchen">      
       <!-- ? ........... Закуски ................. -->     
@@ -88,7 +87,7 @@
             </p>
           </div>
           <span class="item__gramm">270</span>
-          <span class="item__cost">13,00</span>
+          <span class="item__cost">13,0</span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -112,7 +111,7 @@
             <p class="item__text--info">Куриное филе в хрустящей панировке с соусом</p>
           </div>
           <span class="item__gramm">180  </span>
-          <span class="item__cost">9,00  </span>
+          <span class="item__cost">9,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -120,7 +119,7 @@
             <p class="item__text--info">Огурец, томаты, перец, оливки, зелень</p>
           </div>
           <span class="item__gramm">270  </span>
-          <span class="item__cost">9,00  </span>
+          <span class="item__cost">9,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -128,7 +127,7 @@
             <p class="item__text--info">Чесночные гренки из Бородинского хлеба с соусом</p>
           </div>
           <span class="item__gramm">300  </span>
-          <span class="item__cost">6,00  </span>
+          <span class="item__cost">6,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -136,7 +135,7 @@
             <p class="item__text--info">филе Сельди, картофельные дольки, лук маринованный, чесночные гренки из Бородинского хлеба, соус Тар-тар, зелень</p>
           </div>
           <span class="item__gramm">310  </span>
-          <span class="item__cost">10,00  </span>
+          <span class="item__cost">10,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -160,7 +159,7 @@
           </p>
           </div>
           <span class="item__gramm">250  </span>
-          <span class="item__cost">9,00  </span>
+          <span class="item__cost">9,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -168,7 +167,7 @@
             <p class="item__text--info">Филе куриное, яйцо, томат, малат Айсберг, крутоны, сыр Джугас</p>
           </div>
           <span class="item__gramm">260  </span>
-          <span class="item__cost">11,00  </span>
+          <span class="item__cost">11,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -176,7 +175,7 @@
             <p class="item__text--info">Томат, Моцарелла в заливке, Айсберг, сыр Базилик</p>
           </div>
           <span class="item__gramm">230  </span>
-          <span class="item__cost">7,50  </span>
+          <span class="item__cost">7,5 </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -184,7 +183,7 @@
             <p class="item__text--info">Говядина, шампиньоны, перец, салат Айсберг, соус с французской горчицей, сыр Джугас</p>
           </div>
           <span class="item__gramm">260  </span>
-          <span class="item__cost">14,00  </span>
+          <span class="item__cost">14,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -192,7 +191,7 @@
             <p class="item__text--info">Томат, огурец, зеленный лук, сметана, зелень</p>
           </div>
           <span class="item__gramm">235  </span>
-          <span class="item__cost">9,00  </span>
+          <span class="item__cost">9,0 </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -200,7 +199,7 @@
             <p class="item__text--info">Айсберг, креветки, яйцо, томат, крутоны, соус Цезарь, сыр Джугас</p>
           </div>
           <span class="item__gramm">260  </span>
-          <span class="item__cost">16,00  </span>
+          <span class="item__cost">16,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
@@ -208,7 +207,7 @@
             <p class="item__text--info">Обжаренная саринованная свинная вырезка, томаты, огурец, Айсберг, шампиньоны, заправка Французская</p>
           </div>
           <span class="item__gramm">250  </span>
-          <span class="item__cost">12,00  </span>
+          <span class="item__cost">12,0  </span>
         </div>
       </div>             
       <img class="kitchen__man" src="../img/snacks__man.jpg" alt="">     
@@ -226,7 +225,7 @@
           </p>
         </div>
         <span class="item__gramm">  </span>
-        <span class="item__cost">12,00  </span>
+        <span class="item__cost">12,0  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -234,7 +233,7 @@
           <p class="item__text--info">Феттучини, вешанки, шампиньоны, лук карамелизованный, сливки, сыр Пармезан</p>
         </div>
         <span class="item__gramm">300  </span>
-        <span class="item__cost">11,00  </span>
+        <span class="item__cost">11,0  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -242,7 +241,7 @@
           <p class="item__text--info">Свинина полендвица, французская заправка, сухари Панко, яйца</p>
         </div>
         <span class="item__gramm">230  </span>
-        <span class="item__cost">13,00  </span>
+        <span class="item__cost">13,0  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -250,7 +249,7 @@
           <p class="item__text--info">Фетучини, бекон, лук карамелизированный, сливочно-яичный соус, сыр Пармезан</p>
         </div>
         <span class="item__gramm">350  </span>
-        <span class="item__cost">11,00  </span>
+        <span class="item__cost">11,0  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -258,7 +257,7 @@
           <p class="item__text--info">Филе куриное, ветчина, грудинка, шампиньоны, лук, сметана, сливки</p>
         </div>
         <span class="item__gramm">230  </span>
-        <span class="item__cost">9,50  </span>
+        <span class="item__cost">9,5  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -274,7 +273,7 @@
           <p class="item__text--info">Картофельные оладьи, филе куриное, чесночный соус, зелень</p>
         </div>
         <span class="item__gramm">380  </span>
-        <span class="item__cost">3,20  </span>
+        <span class="item__cost">13,0  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
@@ -282,7 +281,7 @@
           <p class="item__text--info">Картофельные оладьи, филе куриное, ветчина, грудинка, шампиньоны, лук, сливки, сметана</p>
         </div>
         <span class="item__gramm">460  </span>
-        <span class="item__cost">16,00  </span>
+        <span class="item__cost">16,0  </span>
       </div>      
     </div>
     </div>
@@ -302,14 +301,14 @@
           <h3 class="item__text__name">Картофель по-деревенски</h3>
         </div>
         <span class="item__gramm">150  </span>
-        <span class="item__cost">5,50  </span>
+        <span class="item__cost">5,5  </span>
       </div>
       <div class="kitchen__wrapper--item item">
         <div class="item__text">
           <h3 class="item__text__name">Овощи гриль</h3>
         </div>
         <span class="item__gramm">90  </span>
-        <span class="item__cost">6,00  </span>
+        <span class="item__cost">6,0  </span>
       </div>
       </div>          
     </div> -->
@@ -325,14 +324,14 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">5,00  </span>
+            <span class="item__cost">5,0  </span>
         </div>
         <div class="kitchen__wrapper--item item">
           <div class="item__text">
             <h3 class="item__text__name">Мороженое с топпингом</h3>
           </div>
           <span class="item__gramm">150/2  </span>
-          <span class="item__cost">5,00  </span>
+          <span class="item__cost">5,0  </span>
         </div>
         <h2 class="kitchen__wrapper--title">Работаем над пончиками)...</h2> 
       </div>             
@@ -353,86 +352,86 @@
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Кола, Фанта, Спрайт</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Бонаква</h3>
             <span class="item__gramm">500 </span>
-            <span class="item__cost">2,00 </span>
+            <span class="item__cost">2,0 </span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Соки RICH</h3>
             <span class="item__gramm">250</span>
-            <span class="item__cost">2,00</span>
+            <span class="item__cost">2,0</span>
           </div>
           <!-- * ............ Кофе ............... -->
           <h2 class="kitchen__wrapper--title">Кофе</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Капучино</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Латте</h3>
             <span class="item__gramm">150</span>
-            <span class="item__cost">4,50</span>
+            <span class="item__cost">4,5</span>
           </div>
           <!-- * ................ TEA ............... -->
           <h2 class="kitchen__wrapper--title">Чай</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный листовой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный Цейлонский</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный с бергамотом</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный с мятой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Китайский жасмин</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Фруктовый</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
-            <h3 class="item__text">Облипиховый</h3>
-            <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <h3 class="item__text">Облепиховый</h3>
+            <span class="item__gramm">350</span>
+            <span class="item__cost">5,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Имбирный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <span class="item__cost">5,0</span>
           </div>
         </div>
       </div>
@@ -445,7 +444,7 @@
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
             <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
