--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -53,17 +53,16 @@
             <i class="fa-solid fa-champagne-glasses"></i>       
             Банкеты</a>
           </li>
-          <!-- <li class="list__link"><a href="./pages/delivery.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
+          <li class="list__link"><a href="./delivery.html"> 
+            <i class="fa-solid fa-map-location-dot"></i>       
             Доставка</a>
-          </li> -->
+          </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
             <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
           </a>
-          <a class="header__icon--map" href="./delivery.html"><i class="fa-solid fa-map-location-dot"></i></a> 
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt=""></a>
+          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
         </div>
       </div>
     </section>
@@ -88,7 +87,7 @@
               </p>
             </div>
             <span class="item__gramm">150  </span>
-            <span class="item__cost">3,80  </span>
+            <span class="item__cost">3,8  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -96,7 +95,7 @@
               <p class="item__text--info">Томат, огурец, капуста, фирменная заправка, зелень</p>
             </div>
             <span class="item__gramm">140  </span>
-            <span class="item__cost">3,20  </span>
+            <span class="item__cost">3,2  </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
@@ -108,7 +107,7 @@
               </p>
             </div>
             <span class="item__gramm">270  </span>
-            <span class="item__cost">3,80  </span>
+            <span class="item__cost">3,8  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -118,7 +117,7 @@
               </p>
             </div>
             <span class="item__gramm">250  </span>
-            <span class="item__cost">3,20  </span>
+            <span class="item__cost">3,2  </span>
           </div>
           <!-- ? ...........ГОРЯЧИЕ БЛЮДА.......... -->
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
@@ -130,7 +129,7 @@
               </p>
             </div>
             <span class="item__gramm">125  </span>
-            <span class="item__cost">6,00  </span>
+            <span class="item__cost">6,0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -142,7 +141,7 @@
               </p>
             </div>
             <span class="item__gramm">170  </span>
-            <span class="item__cost">6,00  </span>
+            <span class="item__cost">6,0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -154,7 +153,7 @@
               </p>
             </div>
             <span class="item__gramm">135  </span>
-            <span class="item__cost">7,00  </span>
+            <span class="item__cost">7,0  </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
@@ -168,7 +167,7 @@
               </p>
             </div>
             <span class="item__gramm">190  </span>
-            <span class="item__cost">5,80  </span>
+            <span class="item__cost">5,8  </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
@@ -180,7 +179,7 @@
               </p>
             </div>
             <span class="item__gramm">150  </span>
-            <span class="item__cost">1,70  </span>
+            <span class="item__cost">1,7  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -190,7 +189,7 @@
               </p>
             </div>
             <span class="item__gramm">150  </span>
-            <span class="item__cost">1,70  </span>
+            <span class="item__cost">1,7  </span>
           </div>
           <!-- ?  ...........ПЕРЕКУРС.......... -->
           <h2 class="lunch__wrapper--title">Перекус</h2>
@@ -200,7 +199,7 @@
               <!-- <p class="item__text--info">Ветчина, томаты, сыр</p> -->
             </div>
             <span class="item__gramm">200  </span>
-            <span class="item__cost">6,00  </span>
+            <span class="item__cost">6,0  </span>
           </div>
           <!--  ? ...........ДЕСЕРТ.......... -->
           <h2 class="lunch__wrapper--title">Десерт</h2>
@@ -212,7 +211,7 @@
               </p>
             </div>
             <span class="item__gramm">180  </span>
-            <span class="item__cost">4,00  </span>
+            <span class="item__cost">4,0  </span>
           </div>
           <!-- ?  ...........ХЛЕБ.......... -->
           <h2 class="lunch__wrapper--title">Хлеб</h2>
@@ -222,7 +221,7 @@
               <p class="item__text--info">Чеснок, кунжут</p>
             </div>
             <span class="item__gramm">170  </span>
-            <span class="item__cost">2,20  </span>
+            <span class="item__cost">2,2  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -230,7 +229,7 @@
               <p class="item__text--info">Чеснок, кунжут</p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">1,70  </span>
+            <span class="item__cost">1,7  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -240,7 +239,7 @@
               </p>
             </div>
             <span class="item__gramm">70  </span>
-            <span class="item__cost">0,40  </span>
+            <span class="item__cost">0,4  </span>
           </div>
           <!-- ? ...........НАПИТКИ.......... -->
           <h2 class="lunch__wrapper--title">Напитки</h2>
@@ -250,7 +249,7 @@
               <p class="item__text--info">RICH в асортименте</p>
             </div>
             <span class="item__gramm">200  </span>
-            <span class="item__cost">1,50  </span>
+            <span class="item__cost">1,5  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -260,7 +259,7 @@
               </p>
             </div>
             <span class="item__gramm">200  </span>
-            <span class="item__cost">0,90  </span>
+            <span class="item__cost">0,9  </span>
           </div>
           <!--  ? ...........Блинчики.......... -->
           <h2 class="lunch__wrapper--title">Блинчики</h2>
@@ -272,7 +271,7 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">6.00  </span>
+            <span class="item__cost">6.0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -282,7 +281,7 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">4.00  </span>
+            <span class="item__cost">4.0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -292,7 +291,7 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">5.50  </span>
+            <span class="item__cost">5.5  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -302,7 +301,7 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">3.50  </span>
+            <span class="item__cost">3.5  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -312,7 +311,7 @@
               </p>
             </div>
             <span class="item__gramm">100  </span>
-            <span class="item__cost">4.50  </span>
+            <span class="item__cost">4.5  </span>
           </div>
         </div>
       </div>
@@ -331,86 +330,86 @@
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Кола, Фанта, Спрайт</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Бонаква</h3>
             <span class="item__gramm">500 </span>
-            <span class="item__cost">2,00 </span>
+            <span class="item__cost">2,0 </span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Соки RICH</h3>
             <span class="item__gramm">250</span>
-            <span class="item__cost">2,00</span>
+            <span class="item__cost">2,0</span>
           </div>
           <!-- * ............ Кофе ............... -->
           <h2 class="kitchen__wrapper--title">Кофе</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Капучино</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Латте</h3>
             <span class="item__gramm">150</span>
-            <span class="item__cost">4,50</span>
+            <span class="item__cost">4,5</span>
           </div>
           <!-- * ................ TEA ............... -->
           <h2 class="kitchen__wrapper--title">Чай</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный листовой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный Цейлонский</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный с бергамотом</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный с мятой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Китайский жасмин</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Фруктовый</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
-            <h3 class="item__text">Облипиховый</h3>
-            <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <h3 class="item__text">Облепиховый</h3>
+            <span class="item__gramm">350</span>
+            <span class="item__cost">5,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Имбирный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <span class="item__cost">5,0</span>
           </div>
         </div>
       </div>
@@ -423,7 +422,7 @@
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
             <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
