--- a/pages/party.html
+++ b/pages/party.html
@@ -53,17 +53,16 @@
             <i class="fa-solid fa-champagne-glasses"></i>       
             Банкеты</a>
           </li>
-          <!-- <li class="list__link"><a href="./pages/delivery.html"> 
-            <i class="fa-solid fa-champagne-glasses"></i>       
+          <li class="list__link"><a href="./delivery.html"> 
+            <i class="fa-solid fa-map-location-dot"></i>       
             Доставка</a>
-          </li> -->
+          </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
             <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
           </a>
-          <a class="header__icon--map" href="./delivery.html"><i class="fa-solid fa-map-location-dot"></i></a> 
-          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt=""></a>
+          <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="../img/insta.png" alt="instagram"></a>
         </div>
       </div>
     </section>
@@ -79,9 +78,10 @@
             <hr class="category__line" />
           </div>
           <ul>
+            <li>банкетное меню</li>
             <li>уютный зал</li>
-            <li>30 мест</li>
-            <li>индивидуальное меню</li>
+            <li>до 25 посадочных мест</li>
+            <li>индивидуальный подход</li>
             <li>Wi-Fi</li>
             <li>мультимедиа</li>
           </ul>          
@@ -100,7 +100,7 @@
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
             <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
