--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="prefetch" href="./css/preloader.css" as="style" />
+    <link rel="prefetch" href="./img/preloader.png" as="image" />
     <script src="https://kit.fontawesome.com/471bab524d.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -50,12 +52,15 @@
             <i class="fa-solid fa-champagne-glasses"></i>       
             Банкеты</a>
           </li>
+          <li class="list__link"><a href="./pages/delivery.html"> 
+            <i class="fa-solid fa-map-location-dot"></i>       
+            Доставка</a>
+          </li>
         </nav>
         <div class="header__icon">
           <a class="header__icon--link" href="tel:+375291371010">
             <ruby> +375 (29) 137 10 10 <rt>Оформить&ensp;доставку</rt></ruby>
           </a>
-          <a class="header__icon--map" href="./pages/delivery.html"><i class="fa-solid fa-map-location-dot"></i></a> 
           <a class="header__icon--inst" href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><img src="./img/insta.png" alt="instagram"></a>
         </div>
       </div>
@@ -66,7 +71,7 @@
         <div class="category pizza__category">
           <hr class="category__line" />
           <h1 class="category__title">            
-            <span class="category__title--sticer">Скидка на вынос -10% </span>
+            <span class="category__title--sticer">Скидка с собой -10% </span>
             <i class="fa-solid fa-pizza-slice"></i>Пицца</h1>
           <hr class="category__line" />
         </div>
@@ -105,7 +110,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">18 BYN</span>
+            <span class="box__numbers--cost">18,0 BYN</span>
             <span>450 г.</span>
           </div>
         </div>
@@ -124,7 +129,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">17 BYN</span>
+            <span class="box__numbers--cost">17,0 BYN</span>
             <span>430 г.</span>
           </div>
         </div>
@@ -139,7 +144,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">18 BYN</span>
+            <span class="box__numbers--cost">18,0 BYN</span>
             <span>500 г.</span>
           </div>
         </div>
@@ -154,7 +159,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">18 BYN</span>
+            <span class="box__numbers--cost">18,0 BYN</span>
             <span>480 г.</span>
           </div>
         </div>
@@ -173,7 +178,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">13 BYN</span>
+            <span class="box__numbers--cost">13,0 BYN</span>
             <span>410 г.</span>
           </div>
         </div>
@@ -197,7 +202,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">16 BYN</span>
+            <span class="box__numbers--cost">16,0 BYN</span>
             <span>510 г.</span>
           </div>
         </div>
@@ -262,7 +267,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">14 BYN</span>
+            <span class="box__numbers--cost">14,0 BYN</span>
             <span>510 г.</span>
           </div>
         </div>
@@ -295,7 +300,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">15 BYN</span>
+            <span class="box__numbers--cost">15,0 BYN</span>
             <span>470 г.</span>
           </div>
         </div>
@@ -313,7 +318,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">15 BYN</span>
+            <span class="box__numbers--cost">15,0 BYN</span>
             <span>450 г.</span>
           </div>
         </div>
@@ -336,7 +341,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">14 BYN</span>
+            <span class="box__numbers--cost">14,0 BYN</span>
             <span>470 г.</span>
           </div>
         </div>
@@ -350,7 +355,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">17 BYN</span>
+            <span class="box__numbers--cost">17,0 BYN</span>
             <span>510 г.</span>
           </div>
         </div>
@@ -364,7 +369,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">17 BYN</span>
+            <span class="box__numbers--cost">17,0 BYN</span>
             <span>510 г.</span>
           </div>
         </div>
@@ -405,7 +410,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">17 BYN</span>
+            <span class="box__numbers--cost">17,0 BYN</span>
             <span>560 г.</span>
           </div>
         </div>
@@ -424,7 +429,7 @@
             </p>
           </div>
           <div class="box__numbers">
-            <span class="box__numbers--cost">18 BYN</span>
+            <span class="box__numbers--cost">18,0 BYN</span>
             <span>600 г.</span>
           </div>
         </div>
@@ -794,7 +799,7 @@
               </p>
             </div>
             <span class="item__gramm">360  </span>
-            <span class="item__cost">13,00  </span>
+            <span class="item__cost">13,0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -805,7 +810,7 @@
               </p>
             </div>
             <span class="item__gramm">330  </span>
-            <span class="item__cost">11,00  </span>
+            <span class="item__cost">11,0  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -816,7 +821,7 @@
               </p>
             </div>
             <span class="item__gramm">300  </span>
-            <span class="item__cost">10,50  </span>
+            <span class="item__cost">10,5  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
@@ -827,7 +832,7 @@
               </p>
             </div>
             <span class="item__gramm">360  </span>
-            <span class="item__cost">12,00  </span>
+            <span class="item__cost">12,0  </span>
           </div>
         </div>
       </div>
@@ -847,86 +852,86 @@
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Кола, Фанта, Спрайт</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Бонаква</h3>
             <span class="item__gramm">500 </span>
-            <span class="item__cost">2,00 </span>
+            <span class="item__cost">2,0 </span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Соки RICH</h3>
             <span class="item__gramm">250</span>
-            <span class="item__cost">2,00</span>
+            <span class="item__cost">2,0</span>
           </div>
           <!-- * ............ Кофе ............... -->
           <h2 class="kitchen__wrapper--title">Кофе</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Эспрессо</h3>
             <span class="item__gramm">50</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Американо</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">2,80</span>
+            <span class="item__cost">2,8</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Капучино</h3>
             <span class="item__gramm">120</span>
-            <span class="item__cost">4,00</span>
+            <span class="item__cost">4,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Латте</h3>
             <span class="item__gramm">150</span>
-            <span class="item__cost">4,50</span>
+            <span class="item__cost">4,5</span>
           </div>
           <!-- * ................ TEA ............... -->
           <h2 class="kitchen__wrapper--title">Чай</h2>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный листовой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный Цейлонский</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Черный с бергамотом</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Зеленный с мятой</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Китайский жасмин</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Фруктовый</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">3,00</span>
+            <span class="item__cost">3,5</span>
           </div>
           <div class="kitchen__wrapper--item item">
-            <h3 class="item__text">Облипиховый</h3>
-            <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <h3 class="item__text">Облепиховый</h3>
+            <span class="item__gramm">350</span>
+            <span class="item__cost">5,0</span>
           </div>
           <div class="kitchen__wrapper--item item">
             <h3 class="item__text">Имбирный</h3>
             <span class="item__gramm">500</span>
-            <span class="item__cost">5,00</span>
+            <span class="item__cost">5,0</span>
           </div>
         </div>
       </div>
@@ -939,7 +944,7 @@
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
             <li><a href="https://www.instagram.com/cafecaprese_minsk/?igshid=YmMyMTA2M2Y%3D" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href=""><i class="fa-regular fa-envelope"></i>Mail</a></li>
+            <li><a href="mailto:kotsuta@yandex.ru"><i class="fa-regular fa-envelope"></i>Mail</a></li>
           </ul>
           <ul>
             <li>ПН - ЧТ: <span>12.00-22.00</span></li>
@@ -958,6 +963,15 @@
           <div data-close class="modal__close">&times;</div>            
           <img src="./promo.png" alt="promo">
         </div>
+    </div>
+    <!-- ? ............. Ivents .............. -->    
+    <div data-modal class="ivent show">Акции</div>
+    <!-- ? ............. Preloader ........... -->
+    <div class="preloader show" id="preloader">
+      <div class="preloader__content">
+        <img class="preloader__img" src="./img/preloader.png" alt="load">
+        <h3>Загрузка...</h3>
+      </div>
     </div>
     <script src="./js/scirpts.js"></script>    
   </body>
