--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="prefetch" href="./css/preloader.css" as="style" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />    
     <link rel="prefetch" href="./img/preloader.png" as="image" />
+    <link rel="prefetch" href="./css/preloader.css" as="style" />
     <script src="https://kit.fontawesome.com/471bab524d.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -954,7 +954,7 @@
         </div>
       </div>      
       <div class="signatyre">
-        <p>Created by <a href="">@Moiseev Arseny</a></p>
+        <p>Created by <a href="https://t.me/me_mosya">@Moiseev Arseny</a></p>
       </div>
     </footer>
     <!-- ? ............... MODAL ............... -->
