--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -432,9 +432,11 @@
         </div>
       </div>      
       <div class="signatyre">
-        <p>Created by <a href="">@Moiseev Arseny</a></p>
+        <p>Created by <a href="https://t.me/me_mosya">@Moiseev Arseny</a></p>
       </div>
     </footer>
+    <!-- ? ............. Ivents .............. -->    
+    <div data-modal class="ivent show">Акции</div>
     <script src="./js/scirpts.js"></script>
   </body>
 </html>
