--- a/pages/party.html
+++ b/pages/party.html
@@ -110,7 +110,7 @@
         </div>
       </div>      
       <div class="signatyre">
-        <p>Created by <a href="">@Moiseev Arseny</a></p>
+        <p>Created by <a href="https://t.me/me_mosya">@Moiseev Arseny</a></p>
       </div>
     </footer>
     <script src="./js/scirpts.js"></script>
